--- a/index.html
+++ b/index.html
@@ -202,13 +202,12 @@
         content of a page when looking at its layout.
       </p>
     </div>
-    <!-- card Start -->
-    <section class="pb-5">
-      <div class="row g-col-6 gap-3 justify-content-center">
-        <div
-          class="d-flex justify-content-between align-items-center border border-1 rounded-3"
-          style="width: 570px; height: 200px"
-        >
+
+    <!------- card Start -->
+
+    <section class="container">
+      <div class="row row-cols-2 g-3 mb-5 pb-5">
+        <div class="col d-flex border align-items-center p-2">
           <div class="me-3">
             <img
               src="images/course/course-1.png"
@@ -225,14 +224,11 @@
             <h6 class="text-primary">Price : 20$</h6>
           </div>
         </div>
-        <div
-          class="d-flex justify-content-between align-items-center border border-1 rounded-3"
-          style="width: 570px; height: 200px"
-        >
+        <div class="col d-flex border align-items-center p-2">
           <div class="me-3">
             <img
               src="images/course/course-2.png"
-              class="card-img-top img-fluid"
+              class="card-img-top"
               alt="..."
             />
           </div>
@@ -245,14 +241,11 @@
             <h6 class="text-primary">Price : 20$</h6>
           </div>
         </div>
-        <div
-          class="d-flex justify-content-between align-items-center border border-1 rounded-3"
-          style="width: 570px; height: 200px"
-        >
+        <div class="col d-flex border align-items-center p-2">
           <div class="me-3">
             <img
               src="images/course/course-3.png"
-              class="card-img-top img-fluid"
+              class="card-img-top"
               alt="..."
             />
           </div>
@@ -265,14 +258,11 @@
             <h6 class="text-primary">Price : 20$</h6>
           </div>
         </div>
-        <div
-          class="d-flex justify-content-between align-items-center border border-1 rounded-3"
-          style="width: 570px; height: 200px"
-        >
+        <div class="col d-flex border align-items-center p-2">
           <div class="me-3">
             <img
               src="images/course/course-4.png"
-              class="card-img-top img-fluid"
+              class="card-img-top"
               alt="..."
             />
           </div>
@@ -285,14 +275,11 @@
             <h6 class="text-primary">Price : 20$</h6>
           </div>
         </div>
-        <div
-          class="d-flex justify-content-between align-items-center border border-1 rounded-3"
-          style="width: 570px; height: 200px"
-        >
+        <div class="col d-flex border align-items-center p-2">
           <div class="me-3">
             <img
               src="images/course/course-5.png"
-              class="card-img-top img-fluid"
+              class="card-img-top"
               alt="..."
             />
           </div>
@@ -305,14 +292,11 @@
             <h6 class="text-primary">Price : 20$</h6>
           </div>
         </div>
-        <div
-          class="d-flex justify-content-between align-items-center border border-1 rounded-3"
-          style="width: 570px; height: 200px"
-        >
+        <div class="col d-flex border align-items-center p-2">
           <div class="me-3">
             <img
               src="images/course/course-6.png"
-              class="card-img-top img-fluid"
+              class="card-img-top"
               alt="..."
             />
           </div>
@@ -334,6 +318,74 @@
     </div>
 
     <!---------------- Popular Course End--------->
+    <!-------------- Explore Start--------->
+    <div style="background-color: rgb(241, 239, 239)" class="container">
+      <div class="d-flex">
+        <div class="flex-shrink-0 ms-0">
+          <img style="width: 80%" src="images/working.png" alt="..." />
+        </div>
+        <div class="flex-grow-1 mt-5 pt-5 pe-5">
+          <h2 class="fw-bold fs-2">
+            Explore The elearning <br />
+            Institute
+          </h2>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable. If you are going to use a passage of Lorem Ipsum, you
+            need to be sure. <br />
+            <br />
+            Anything embarrassing hidden in the middle of text. All the Lorem
+            Ipsum generators on the Internet tend to repeat predefined
+          </p>
+          <div class="d-flex mb-3">
+            <div class="p-2">
+              <h2 class="fw-bold">3.2K+</h2>
+
+              <p>Online Course</p>
+            </div>
+            <div class="p-2">
+              <h2 class="fw-bold">600+</h2>
+
+              <p>Expert member</p>
+            </div>
+            <div class="p-2">
+              <h2 class="fw-bold">1k+</h2>
+
+              <p>Rating & Review</p>
+            </div>
+          </div>
+          <div class="pt-2">
+            <button class="btn bg-primary text-light px-4" type="submit">
+              See More Courses
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-------------- Explore End----------->
+
+    <!-------------- Register Container Start-------->
+    <div
+      class="container d-flex align-items-center justify-content-center text-light bg-primary mt-5 p-5 mb-5"
+    >
+      <div class="ms-5" style="width: 70%">
+        <h2 class="fw-bold">Ready to join?</h2>
+        <p>
+          It is a long established fact that a reader will be distracted by the
+          <br />
+          readable content of a page when looking at its layout.
+        </p>
+      </div>
+      <div class="pt-4 ms-4">
+        <button class="btn bg-light text-primary px-4 mx-5">
+          <a class="" href="">Register Now</a>
+        </button>
+      </div>
+    </div>
+
+    <!-------------- Register Container Start-------->
 
     <!-------------------------------- Main Section End---------------------- -->
 
