--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
           <div class="carousel-item active">
             <img
               src="images/cover/cover-1.png"
+              style="filter: brightness(60%)"
               class="d-block w-100"
               alt="..."
             />
@@ -120,6 +121,7 @@
           <div class="carousel-item">
             <img
               src="images/cover/cover-2.jpg"
+              style="filter: brightness(60%)"
               class="d-block img-fluid"
               alt="..."
             />
@@ -143,6 +145,7 @@
           <div class="carousel-item">
             <img
               src="images/cover/cover-3.jpg"
+              style="filter: brightness(60%)"
               class="d-block w-100"
               alt="..."
             />
@@ -318,6 +321,7 @@
     </div>
 
     <!---------------- Popular Course End--------->
+
     <!-------------- Explore Start--------->
     <div style="background-color: rgb(241, 239, 239)" class="container">
       <div class="d-flex">
@@ -385,7 +389,83 @@
       </div>
     </div>
 
-    <!-------------- Register Container Start-------->
+    <!-------------- Register Container End-------->
+
+    <!-------------- Student Container Start------>
+    <section class="container pt-5">
+      <div>
+        <h2 class="fw-bold">
+          Meet Our Successfull <br />
+          Students
+        </h2>
+        <br />
+        <p>
+          It is a long established fact that a reader will be distracted by the
+          <br />
+          readable content of a page when looking at its layout.
+        </p>
+      </div>
+      <div class="row row-cols-4">
+        <div class="col">
+          <div class="card">
+            <img
+              src="images/student/student-1.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5>Awlad Hossain</h5>
+              <p class="card-text">UIUX Designer</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="images/student/student-2.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5>Jannatul Islam</h5>
+              <p class="card-text">Motion Designer</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="images/student/student-3.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5>Imran Hossain</h5>
+              <p class="card-text">Graphic Designer</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="images/student/student-4.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5>Nishi Akter</h5>
+              <p class="card-text">Web Developer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center mt-5 mb-5 pb-5">
+        <button class="btn bg-primary text-light px-4" type="submit">
+          See More Courses
+        </button>
+      </div>
+    </section>
+    <!-------------- Student Container End-------->
 
     <!-------------------------------- Main Section End---------------------- -->
 
