--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/3e406dbd53.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -372,7 +376,7 @@
 
     <!-------------- Register Container Start-------->
     <div
-      class="container d-flex align-items-center justify-content-center text-light bg-primary mt-5 p-5 mb-5"
+      class="container d-flex align-items-center justify-content-center text-light bg-primary mt-5 p-5 mb-5 rounded-3"
     >
       <div class="ms-5" style="width: 70%">
         <h2 class="fw-bold">Ready to join?</h2>
@@ -467,8 +471,236 @@
     </section>
     <!-------------- Student Container End-------->
 
+    <!-------------- Student Feedback Start--->
+    <section class="container d-flex mt-5 mb-5">
+      <div class="border p-3 me-3">
+        <div class="d-flex justify-content-between pb-2">
+          <div>
+            <img src="images/comma.png" alt="" />
+          </div>
+          <div>
+            <i class="fa-solid fa-star text-warning"></i>
+            <i class="fa-solid fa-star text-warning"></i>
+            <i class="fa-solid fa-star text-warning"></i>
+            <i class="fa-solid fa-star text-warning"></i>
+            <i class="fa-regular fa-star text-warning"></i>
+          </div>
+        </div>
+        <div>
+          <p>
+            Don’t get us wrong. We’re not telling you that you should only give
+            feedback when students get something right! We all know that
+            correcting students is essential for understanding and also for
+            building resiliency. Providing constructive, critical feedback to
+            our students is important, but how we deliver our feedback is vital.
+          </p>
+        </div>
+        <div class="d-flex">
+          <div>
+            <img class="me-3 p-3" src="images/student/student-5.png" alt="" />
+          </div>
+          <div>
+            <h5 class="fs-6">Awlad Hossain</h5>
+            <p>UI Designer</p>
+          </div>
+        </div>
+      </div>
+      <div class="border p-3">
+        <div class="d-flex justify-content-between pb-2">
+          <div>
+            <img src="images/comma.png" alt="" />
+          </div>
+          <div>
+            <i class="fa-solid fa-star text-warning"></i>
+            <i class="fa-solid fa-star text-warning"></i>
+            <i class="fa-solid fa-star text-warning"></i>
+            <i class="fa-solid fa-star text-warning"></i>
+            <i class="fa-regular fa-star text-warning"></i>
+          </div>
+        </div>
+        <div>
+          <p>
+            Don’t get us wrong. We’re not telling you that you should only give
+            feedback when students get something right! We all know that
+            correcting students is essential for understanding and also for
+            building resiliency. Providing constructive, critical feedback to
+            our students is important, but how we deliver our feedback is vital.
+          </p>
+        </div>
+        <div class="d-flex">
+          <div>
+            <img class="me-3 p-2" src="images/student/student-6.png" alt="" />
+          </div>
+          <div>
+            <h5 class="fs-6">Shanta Akter</h5>
+            <p>Graphics Designer</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-------------- Student Feedback End----->
+
+    <!----------------- accordion start  -->
+    <section class="container">
+      <div class="text-center pb-5">
+        <h3 class="fw-bolder">Frequently Asked Questions</h3>
+        <p>
+          It is a long established fact that a reader will be distracted by the
+          readable <br />
+          content of a page when looking at its layout.
+        </p>
+      </div>
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseOne"
+              aria-expanded="true"
+              aria-controls="collapseOne"
+            >
+              What are the differece of flexbox and grid?
+            </button>
+          </h2>
+          <div
+            id="collapseOne"
+            class="accordion-collapse collapse show"
+            aria-labelledby="headingOne"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body">
+              Grid and flexbox. The basic difference between CSS Grid Layout and
+              CSS Flexbox Layout is that flexbox was designed for layout in one
+              dimension - either a row or a column. Grid was designed for
+              two-dimensional layout - rows, and columns at the same time.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo"
+              aria-expanded="false"
+              aria-controls="collapseTwo"
+            >
+              What are the differece of tailwind and bootstrap?
+            </button>
+          </h2>
+          <div
+            id="collapseTwo"
+            class="accordion-collapse collapse"
+            aria-labelledby="headingTwo"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body">
+              Tailwind offers predesigned widgets to build a site from scratch
+              with fast UI development. Bootstrap comes with a set of pre-styled
+              responsive, mobile-first components that possess a definite UI
+              kit. Tailwind CSS uses a set of utility classes to create a neat
+              UI with more flexibility and uniqueness.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseThree"
+              aria-expanded="false"
+              aria-controls="collapseThree"
+            >
+              What is css box model?
+            </button>
+          </h2>
+          <div
+            id="collapseThree"
+            class="accordion-collapse collapse"
+            aria-labelledby="headingThree"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body">
+              In CSS, the term "box model" is used when talking about design and
+              layout. The CSS box model is essentially a box that wraps around
+              every HTML element.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingFour">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseFour"
+              aria-expanded="false"
+              aria-controls="collapseFour"
+            >
+              What is a semantic tag?
+            </button>
+          </h2>
+          <div
+            id="collapseFour"
+            class="accordion-collapse collapse"
+            aria-labelledby="headingFour"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body">
+              The HTML semantics refers to the tags that provide meaning to an
+              HTML page rather than just presentation. It makes HTML more
+              comprehensible by better defining the different sections and
+              layout of web pages.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-------------- accordion end------- -->
+
+    <!------------------- company start  -->
+    <section class="container text-center mt-5 pt-5 mb-5 pb-5">
+      <h3 class="pb-4 fw-bolder">Trusted by over 800+ companies</h3>
+      <div>
+        <img class="pe-3 img-fluid" src="images/company/company-1.png" alt="" />
+        <img class="pe-3 img-fluid" src="images/company/company-2.png" alt="" />
+        <img class="pe-3 img-fluid" src="images/company/company-3.png" alt="" />
+        <img class="pe-3 img-fluid" src="images/company/company-4.png" alt="" />
+        <img class="pe-3 img-fluid" src="images/company/company-5.png" alt="" />
+        <img class="pe-3 img-fluid" src="images/company/company-6.png" alt="" />
+      </div>
+    </section>
+    <!-- company end -->
+
     <!-------------------------------- Main Section End---------------------- -->
 
+    <!-------------------------------- Footer Section Start----------------------->
+    <footer
+      class="text-center bg-black text-light p-5"
+      style="width: 100%; height: 400px"
+    >
+      <h3 class="pt-4 pb-3">Pro Edu</h3>
+      <p>
+        Office 41, Zawaya Buildin, Ghala Muscat, <br />
+        Sultanate of Oman
+      </p>
+      <p>Privacy Policy | Terms of use</p>
+      <div>
+        <i class="fa-brands fa-facebook fs-5 p-2"></i>
+        <i class="fa-brands fa-twitter fs-5 p-2"></i>
+        <i class="fa-brands fa-linkedin fs-5 p-2"></i>
+        <i class="fa-brands fa-instagram fs-5 p-2"></i>
+      </div>
+    </footer>
+    <!-------------------------------- Footer Section End---------------------- -->
+
+    <!-- ------------js connect -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
