--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     <header class="mb-5 pb-5">
       <!-- Header nav Start -->
       <div class="header-nav pb-3">
-        <nav class="navbar navbar-expand-lg bg-light container">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light container">
           <div class="container-fluid d-flex justify-content-between">
-            <a class="navbar-brand fw-bold fs-1 me-5" href="#">Pro Edu</a>
+            <a class="navbar-brand fw-bold fs-1 me-5" href="#"
+              >Web <span class="text-primary">Dev</span></a
+            >
             <button
               class="navbar-toggler"
               type="button"
@@ -105,8 +107,8 @@
               class="d-block w-100"
               alt="..."
             />
-            <div class="carousel-caption d-none d-md-block">
-              <div class="text-center pb-5 mb-5">
+            <div class="carousel-caption d-md-block">
+              <div class="text-center pb-5 pb-sm-2 mb-5">
                 <h2 class="fw-bold fs-1 pb-2">
                   Get Started Digital <br />
                   Learning
@@ -213,7 +215,7 @@
     <!------- card Start -->
 
     <section class="container">
-      <div class="row row-cols-2 g-2 mb-5 pb-5">
+      <div class="row row-cols-2 g-2 mb-5 pb-5 row-cols-lg-2 row-cols-md-1 g-4">
         <div class="d-flex border align-items-center p-2">
           <div class="me-3">
             <img
@@ -376,7 +378,7 @@
 
     <!-------------- Register Container Start-------->
     <div
-      class="container d-flex align-items-center justify-content-center text-light bg-primary mt-5 p-5 mb-5 rounded-3"
+      class="container d-flex d-sm-flex justify-content-center text-light bg-primary mt-5 p-5 mb-5 rounded-3"
     >
       <div class="ms-2" style="width: 70%">
         <h2 class="fw-bold">Ready to join?</h2>
@@ -390,7 +392,7 @@
         <div class="container mt-3">
           <button
             type="button"
-            class="btn btn-info"
+            class="btn btn-light"
             data-bs-toggle="modal"
             data-bs-target="#myModal"
           >
@@ -503,7 +505,7 @@
       </div>
       <div class="text-center mt-5 mb-5 pb-5">
         <button class="btn bg-primary text-light px-4" type="submit">
-          See More Courses
+          View All
         </button>
       </div>
     </section>
@@ -521,7 +523,6 @@
         <span
           class="position-absolute btn top-50 start-0 translate-middle badge rounded-pill bg-light text-primary border p-2 fs-4"
         >
-          <
           <span class="visually-hidden"></span>
         </span>
 
@@ -750,10 +751,18 @@
       </p>
       <p>Privacy Policy | Terms of use</p>
       <div>
-        <i class="fa-brands fa-facebook fs-5 p-2"></i>
-        <i class="fa-brands fa-twitter fs-5 p-2"></i>
-        <i class="fa-brands fa-linkedin fs-5 p-2"></i>
-        <i class="fa-brands fa-instagram fs-5 p-2"></i>
+        <a target="_blank" href="https://www.facebook.com/"
+          ><i class="fa-brands fa-facebook fs-5 p-2 text-info"></i
+        ></a>
+        <a target="_blank" href="https://twitter.com/?lang=en"
+          ><i class="fa-brands fa-twitter fs-5 p-2 text-info"></i
+        ></a>
+        <a target="_blank" href="https://www.linkedin.com/"
+          ><i class="fa-brands fa-linkedin fs-5 p-2 text-info"></i
+        ></a>
+        <a target="_blank" href="https://www.instagram.com/"
+          ><i class="fa-brands fa-instagram fs-5 p-2 text-info"></i
+        ></a>
       </div>
       <p class="pt-3">&copy;2022,Junior Web Developer. All rights reserved.</p>
     </footer>
